fixed navbar, working on header spacing

--- a/style/style.css
+++ b/style/style.css
@@ -48,11 +48,13 @@ ul {
 
 }
 
+
+
 .main-nav {
+	position: fixed;
 	width: 100%;
 	display: flex;
 	justify-content: space-evenly;
-	list-style: none;
 	padding: 0;
 	margin-top: 0;
 	height: 3em;
@@ -75,14 +77,11 @@ ul {
 /*HEADER*/
 /*-----------------------------------*/
 
-.showcase {
-	height: 75vh;
-}
-
 
 /*-----------------------------------*/
 /*ABOUT SECTION*/
 /*-----------------------------------*/
+
 #about-section {
 	max-height: 100%;
 	border: 1px solid black;
